# reengkigo

./: .gitIgnore  README.md
frontend/: build.sh
frontend/proto/: analytics.proto  login.proto  user.proto
frontend/proto/admin/: settings.proto
frontend/reengkigo_flutter/: README.md  pubspec.yaml
frontend/reengkigo_flutter/android/app/: build.gradle.kts
frontend/reengkigo_flutter/ios/: before.pbxproj  setup_ffi.sh
frontend/reengkigo_flutter/ios/Runner/: Info.plist
frontend/reengkigo_flutter/ios/Runner.xcodeproj/: project.pbxproj  project.pbxproj.backup.1753173913
frontend/reengkigo_flutter/lib/: dio_network_service.dart  main.dart  performance_service.dart
frontend/reengkigo_flutter/lib/ffi/: reengkigo_ffi.dart
frontend/reengkigo_flutter/linux/: CMakeLists.txt
frontend/reengkigo_flutter/linux/runner/: my_application.cc
frontend/reengkigo_flutter/protos/: login.proto
frontend/reengkigo_flutter/test/: widget_test.dart
frontend/reengkigo_flutter/web/: index.html  manifest.json
frontend/reengkigo_flutter/windows/: CMakeLists.txt
frontend/reengkigo_flutter/windows/runner/: Runner.rc  (+1 more)
frontend/rust-lib/: Cargo.toml  build.sh  build_android.sh  build_xcframework.sh  cbindgen.toml
frontend/rust-lib/.cargo/: config.toml
frontend/rust-lib/dart-ffi/: Cargo.toml
frontend/rust-lib/dart-ffi/src/: http_bridge.rs  lib.rs
frontend/rust-lib/error-lib/: Cargo.toml
frontend/rust-lib/http-lib/: Cargo.toml
frontend/rust-lib/http-lib/src/: lib.rs
frontend/rust-lib/proto-lib/: Cargo.toml  build.rs
frontend/rust-lib/test-lib/: Cargo.toml  build.rs
(+46 files in other folders)
