[package]
name = "dart-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
http-lib = { path = "../http-lib" }
proto-lib = { path = "../proto-lib" }
prost = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
serde_json = "1.0"
base64 = "0.21"

[lib]
name = "dart_ffi"
crate-type = ["cdylib", "staticlib"]