[package]
name = "http-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
proto-lib = { path = "../proto-lib" }
error-lib = { path = "../error-lib" }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
prost = "0.12"
prost-types = "0.12"
once_cell = "1.19"

[build-dependencies]
prost-build = "0.12"
